# wzann

./: .gitignore  CMakeLists.txt  README.md  VERSION.in
doc/Präsentation/: simcontroller.xmi  winzent.odp
experiment/protocol-simulation/riant_test_feeder/.svn/text-base/: NEDOマニュアル.pdf.svn-base
experiment/protocol-simulation/riant_test_feeder/root/.svn/text-base/: 根元の線路負荷データ.xls.svn-base
lib/: ActivationFunction.cpp  ActivationFunction.h  BackpropagationTrainingAlgorithm.cpp  CMakeLists.txt  ClassRegistry.h  GradientAnalysisHelper.h  JsonSerializable.h  Layer.h  LayerSizeMismatchException.h  LibVariantSupport.cpp  LibVariantSupport.h  NeuralNetwork.cpp  NeuralNetworkPattern.h  Neuron.cpp  Neuron.h  PsoTrainingAlgorithm.h  REvolutionaryTrainingAlgorithm.cpp  REvolutionaryTrainingAlgorithm.h  RpropTrainingAlgorithm.cpp  RpropTrainingAlgorithm.h  SchemaValidationException.h  SimpleWeightRandomizer.cpp  SimulatedAnnealingTrainingAlgorithm.cpp  TrainingAlgorithm.h  TrainingSet.cpp  TrainingSet.h  UnknownNeuronException.h  Vector.h  WeightFixedException.cpp  WeightRandomizer.h  libwzann.pc.in
man/: CMakeLists.txt  wzann-mkann.1.txt  wzann-repl.1.txt  wzann-train.1.txt
src/: ActivationFunction.cpp  ActivationFunction.h  BackpropagationTrainingAlgorithm.cpp  BackpropagationTrainingAlgorithm.h  CMakeLists.txt  ClassRegistry.h  Connection.cpp  Connection.h  ElmanNetworkPattern.cpp  ElmanNetworkPattern.h  Exception.h  GradientAnalysis.cpp  GradientAnalysisHelper.cpp  GradientAnalysisHelper.h  JsonSerializable.cpp  JsonSerializable.h  Layer.cpp  Layer.h  LayerSizeMismatchException.cpp  LayerSizeMismatchException.h  LibVariantSupport.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkPattern.cpp  NeuralNetworkPattern.h  Neuron.cpp  Neuron.h  NguyenWidrowWeightRandomizer.cpp  NguyenWidrowWeightRandomizer.h  NoConnectionException.cpp  NoConnectionException.h  PerceptronNetworkPattern.cpp  PerceptronNetworkPattern.h  PsoTrainingAlgorithm.h  RpropTrainingAlgorithm.cpp  RpropTrainingAlgorithm.h  SchemaValidationException.cpp  SchemaValidationException.h  Schemata.qrc  Serializable.h  (+20 more)
src/ann/: .nfs000000016043f923000000da  AbstractTrainingStrategy.cpp  AbstractTrainingStrategy.h  ActivationFunction.cpp  ActivationFunction.h  BackpropagationTrainingAlgorithm.cpp  BackpropagationTrainingAlgorithm.h  CMakeLists.txt  Connection.cpp  Connection.h  ConstantActivationFunction.cpp  ConstantActivationFunction.h  ElmanNetworkPattern.cpp  ElmanNetworkPattern.h  EvolutionaryTrainingAlgorithm.cpp  EvolutionaryTrainingAlgorithm.h  Exception.cpp  Exception.h  Layer.cpp  Layer.h  LinearActivationFunction.cpp  LinearActivationFunction.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkPattern.cpp  NeuralNetworkPattern.h  Neuron.cpp  Neuron.h  NguyenWidrowWeightRandomizer.cpp  NguyenWidrowWeightRandomizer.h  PerceptronNetworkPattern.cpp  PerceptronNetworkPattern.h  PsoTrainingAlgorithm.cpp  PsoTrainingAlgorithm.h  REvolutionaryTrainingAlgorithm.cpp  REvolutionaryTrainingAlgorithm.h  RememberingActivationFunction.cpp  RememberingActivationFunction.h  RpropTrainingAlgorithm.cpp  RpropTrainingAlgorithm.h  (+18 more)
src/ann/schema/: TrainingSetSchema.json
test/: .gitignore  ActivationFunctionTest.cpp  ActivationFunctionTest.h  BackpropagationTrainingAlgorithmTest.cpp  BackpropagationTrainingAlgorithmTest.h  CMakeLists.txt  ClassRegistryTest.cpp  ClassRegistryTest.h  ElmanNetworkPatternTest.cpp  ElmanNetworkPatternTest.h  LayerTest.cpp  LayerTest.h  NeuralNetworkPatternTest.cpp  NeuralNetworkPatternTest.h  NeuralNetworkTest.cpp  NeuralNetworkTest.h  NeuronTest.cpp  NeuronTest.h  NguyenWidrowWeightRandomizerTest.cpp  NguyenWidrowWeightRandomizerTest.h  PerceptronNetworkPatternTest.cpp  PerceptronNetworkPatternTest.h  PsoTrainingAlgorithmTest.cpp  PsoTrainingAlgorithmTest.h  REvolutionaryTrainingAlgorithmTest.cpp  REvolutionaryTrainingAlgorithmTest.h  RpropTrainingAlgorithmTest.cpp  RpropTrainingAlgorithmTest.h  SimpleWeightRandomizerTest.cpp  SimpleWeightRandomizerTest.h  SimulatedAnnealingTrainingAlgorithmTest.cpp  SimulatedAnnealingTrainingAlgorithmTest.h  TestSchemaPath.h.in  TrainingSetTest.cpp  TrainingSetTest.h  test_FourBitParity.bats
test/ann/: ActivationFunctionTest.cpp  ActivationFunctionTest.h  BackpropagationTrainingAlgorithmTest.cpp  BackpropagationTrainingAlgorithmTest.h  CMakeLists.txt  ConnectionTest.cpp  ConnectionTest.h  ElmanNetworkPatternTest.cpp  LayerTest.cpp  LayerTest.h  NeuralNetworkPatternTest.cpp  NeuralNetworkPatternTest.h  NeuralNetworkTest.cpp  NeuralNetworkTest.h  NeuronTest.cpp  NeuronTest.h  NguyenWidrowWeightRandomizerTest.cpp  NguyenWidrowWeightRandomizerTest.h  PerceptronNetworkPatternTest.cpp  PerceptronNetworkPatternTest.h  PsoTrainingAlgorithmTest.cpp  PsoTrainingAlgorithmTest.h  REvolutionaryTrainingAlgorithmTest.cpp  REvolutionaryTrainingAlgorithmTest.h  RpropTrainingAlgorithmTest.cpp  RpropTrainingAlgorithmTest.h  SimpleWeightRandomizerTest.cpp  SimulatedAnnealingTrainingAlgorithmTest.cpp  TestCase.h  Testrunner.cpp  Testrunner.h  TrainingSetTest.cpp  TrainingSetTest.h  ann.pro  tst_ann  tst_ann.cpp
test/ann/mock/: LinearNeuralNetworkPattern.cpp  LinearNeuralNetworkPattern.h
test/mock/: FourBitParity-Train.json  FourBitParity-Verify.json  LinearNeuralNetworkPattern.cpp  LinearNeuralNetworkPattern.h
test/test-forecaster/.externalToolBuilders/: QMake Builder.launch
